# hs-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  REFACTORING_PLAN.md  app.py  app_old.py  batch_mapper.py  mkdocs.yml  pyproject.toml
.dvc/: config
analysis/: PROMPT_CHANGES_SUMMARY.md  general_prompt_improvements.md  prompt_update_recommendations.md  prompt_updates_implementation_summary.md  questionable_classifications_analysis.md  test_results_summary.md
configs/multi_choice_classification/compare_final_codes/: config.yaml
configs/multi_choice_classification/rank_chapter_candidates/: config.yaml  config.yaml.bak  config.yaml.bak5  config.yaml.bak6
configs/multi_choice_classification/rank_heading_candidates/: config.yaml  config.yaml.bak  config.yaml.bak5  config.yaml.bak6
configs/multi_choice_classification/rank_subheading_candidates/: config.yaml  config.yaml.bak  config.yaml.bak5  config.yaml.bak6
configs/multi_choice_classification/select_chapter_candidates/: config.yaml
configs/multi_choice_classification/select_heading_candidates/: config.yaml
configs/multi_choice_classification/select_subheading_candidates/: config.yaml
configs/single_path_classification/rank_chapter_candidates/: config.yaml  config.yaml.bak4
configs/single_path_classification/rank_heading_candidates/: config.yaml.bak  config.yaml.bak5  config.yaml.bak6
configs/single_path_classification/rank_subheading_candidates/: config.yaml.bak  config.yaml.bak6
configs/single_path_classification/select_chapter_candidates/: config.yaml
configs/single_path_classification/select_heading_candidates/: config.yaml
configs/single_path_classification/select_subheading_candidates/: config.yaml
configs/wide_net_classification/: README.md  workflow.yaml
data/: avalara_tax_codes.xlsx  benchmarks.dvc  hs6_examples_cleaned.csv  hs_codes.csv  htsdata_raw.csv
data/chapters_markdown/: chapter_01_notes.md  chapter_02_notes.md  chapter_03_notes.md  chapter_04_notes.md  chapter_05_notes.md  chapter_06_notes.md  chapter_07_notes.md  chapter_08_notes.md  chapter_09_notes.md  chapter_10_notes.md  chapter_11_notes.md  chapter_12_notes.md  chapter_13_notes.md  chapter_14_notes.md  chapter_15_notes.md  chapter_16_notes.md  chapter_17_notes.md  chapter_18_notes.md  chapter_19_notes.md  chapter_20_notes.md  chapter_21_notes.md  chapter_22_notes.md  chapter_23_notes.md  chapter_24_notes.md  chapter_25_notes.md  chapter_26_notes.md  chapter_27_notes.md  chapter_28_notes.md  chapter_29_notes.md  chapter_30_notes.md  chapter_31_notes.md  chapter_32_notes.md  chapter_33_notes.md  chapter_34_notes.md  chapter_35_notes.md  chapter_36_notes.md  chapter_37_notes.md  chapter_38_notes.md  chapter_39_notes.md  chapter_40_notes.md  (+58 more)
docs/: index.md  wide_net_classification_explained.md
docs/api-reference/: agent.md  cli.md  config.md  data-loader.md  models.md
docs/api-reference/core/: configuration.md  exceptions.md  (+2 more)
docs/architecture/: refactored-structure.md
docs/development/: AGENTS.md  CONFIGURATION_SYSTEM.md  PROJECT_STRUCTURE_ANALYSIS.md  REFACTOR_SUMMARY.md  TWO_STEP_APPROACH.md  testing.md
docs/experiments/: 01-no-hs-code-feature.md  02-no-hs-code-test-results.md  03-edge-case-handling-improvements.md  README.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/user-guide/: cli-usage.md  overview.md
hs_agent/: __init__.py  agent.py  app.py  cli.py  config_loader.py  data_loader.py  graph_models.py  models.py
hs_agent/client/: __init__.py  api_client.py
hs_agent/config/: __init__.py  settings.py
hs_agent/core/: __init__.py  data_loader.py  exceptions.py  logging.py
hs_agent/data/: __init__.py  chapter_notes.py
hs_agent/factories/: __init__.py  model_factory.py
hs_agent/policies/: __init__.py  retry_policy.py
hs_agent/services/: __init__.py  chapter_notes_service.py
hs_agent/utils/: logger.py  retry.py
hs_agent/workflows/: __init__.py  base_workflow.py  multi_path_workflow.py  single_path_workflow.py  tax_code_mapper.py
scripts/: debug_tool.py  run_benchmark.py  test_edge_cases.py  test_edge_cases_new.py  test_edge_cases_one_by_one.py  test_edge_cases_quick.py  test_user_products.py  test_user_products_batch.py
static/: classify-multi.html  classify.html  index.html  mapping_data.json
tests/: conftest.py
tests/integration/: test_agent_baseline.py  test_api_endpoints.py  test_batch_mapping.py  test_single_mapping.py
tests/unit/: test_6digit_search.py  test_base_workflow.py  test_chapter_notes_service.py  test_classifier.py  test_config_loader.py  test_edge_cases.py  test_hs_lookup.py  test_langfuse.py  test_multi_path_workflow.py  test_retry_policy.py  test_search_fix.py  test_simple.py  test_single_path_workflow.py
tools/: benchmark_creator.html  convert_parquet.py
(+72 files in other folders)
