[project]
name = "hs-agent"
version = "0.1.0"
description = "HS number classification agent using hierarchical approach with Pydantic AI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "fastapi>=0.116.2",
    "httpx>=0.25.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-vertexai>=2.1.2",
    "langgraph>=0.6.7",
    "loguru>=0.7.3",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-material>=9.6.20",
    "mkdocstrings[python]>=0.30.1",
    "mkdocstrings-python>=1.18.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.0.0",
    "pydantic-ai-slim[google]>=1.0.8",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
    "uvicorn>=0.35.0",
    "grandalf>=0.8",
    "pyyaml>=6.0.2",
    "pypdf>=6.1.1",
    "pymupdf4llm>=0.0.27",
    "logfire>=4.16.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
    "opentelemetry-instrumentation-asgi>=0.60b1",
]

[project.scripts]
# New unified CLI interface
hs-agent = "hs_agent.cli:main"

# Legacy commands removed - use 'hs-agent serve' and 'hs-agent classify' instead

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hs_agent"]

[dependency-groups]
dev = [
    "jupyterlab>=4.4.9",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "types-requests>=2.32.4.20250913",
]

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["hs_agent"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG"]  # Unused arguments OK in tests (fixtures)

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false  # Start permissive, tighten later
check_untyped_defs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["hs_agent"]
omit = [
    "tests/*",
    "hs_agent/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
